--- a/exploration/data_viz_practice.ipynb
+++ b/exploration/data_viz_practice.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,10 +27,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alt.Chart(hatecrimes).mark_rect().encode(\n",
-    "    x='date(incident_date):O',\n",
-    "    y='month(incident_date):O',\n",
-    "    color='count()'\n",
+    "alt.Chart(hatecrimes, title=\"Seasonality of Hate Crimes\").mark_rect().encode(\n",
+    "    alt.X('date(incident_date):O').title(\"Date\"),\n",
+    "    alt.Y('month(incident_date):O').title(\"Month\"),\n",
+    "    alt.Color('count()').title(\"Incidents\").scale(scheme='orangered')\n",
     ").display()"
    ]
   },
@@ -40,9 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alt.Chart(hatecrimes).mark_line().encode(\n",
-    "        x='data_year:O',\n",
-    "        y = 'count():N'\n",
+    "alt.Chart(hatecrimes, title='Hate Crimes Over Time').mark_line().encode(\n",
+    "        alt.X('data_year:O').title(\"Year\"),\n",
+    "        alt.Y('count():N').title(\"Hate Crime Incidents\"),\n",
+    "        color=alt.value(\"#ad2e03\")\n",
     "    ).display()"
    ]
   },
@@ -79,9 +80,9 @@
     "top10 = [\"Anti-Black or African American\", \"Anti-Jewish\", \"Anti-White\", \"Anti-Gay (Male)\", \"Anti-Hispanic or Latino\", \"Anti-Other Race/Ethnicity/Ancestry\",\"Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)\", \"Anti-Asian\", \"Anti-Multiple Races, Group\", \"Anti-Lesbian (Female)\"]\n",
     "hatecrimestop10 = hatecrimes.loc[hatecrimes['bias_desc'].isin(top10)]\n",
     "alt.Chart(hatecrimestop10).mark_line().encode(\n",
-    "        x='data_year:O',\n",
-    "        y = 'count():N',\n",
-    "        color='bias_desc:N'\n",
+    "        alt.X('data_year:O').title(\"Year\"),\n",
+    "        alt.Y('count():N').title(\"Incidents\"),\n",
+    "        alt.Color('bias_desc:N').title(\"Crime Bias\").scale(scheme='category10')\n",
     "    ).display()"
    ]
   },
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,11 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hatecrimes_w_ids = hatecrimes.merge(pop, left_on='state_name', right_on='state')"
+    "hatecrimes_w_ids = hatecrimes.merge(pop, left_on='state_name', right_on='state')\n",
+    "state_counts = hatecrimes_w_ids.groupby(['id'], as_index=False).size()\n"
    ]
   },
   {
@@ -129,8 +131,8 @@
    "outputs": [],
    "source": [
     "states = alt.topo_feature(data.us_10m.url, 'states')\n",
-    "alt.Chart(states).mark_geoshape().encode(\n",
-    "    color='size:Q'\n",
+    "alt.Chart(states, title=\"Hate Crime Map\").mark_geoshape().encode(\n",
+    "    alt.Color('size:Q').scale(scheme='browns').title(\"Hate Crime Incidents\")\n",
     ").transform_lookup(\n",
     "    lookup='id',\n",
     "    from_=alt.LookupData(state_counts, 'id', list(state_counts.columns))\n",
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,9 +202,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_c = alt.Chart(hatecrimestop10_rec).mark_line().encode(\n",
-    "        x='yearmonth(incident_date):O',\n",
-    "        y = 'count()', \n",
+    "main_c = alt.Chart(hatecrimestop10_rec, title=\"Top Hate Crimes From 2019-2023\").mark_line().encode(\n",
+    "        alt.X('yearmonth(incident_date):O').title('Month'),\n",
+    "        alt.Y('count()').title('Hate Crime Incidents'), \n",
     "        color='bias_desc:N'\n",
     "    )\n",
     "\n",
