--- a/exploration/data_viz_practice.ipynb
+++ b/exploration/data_viz_practice.ipynb
@@ -23,10 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# GRAPH 1 -- HEATMAP (SEASONALITY)\n",
     "alt.Chart(hatecrimes, title=\"Seasonality of Hate Crimes\").mark_rect().encode(\n",
     "    alt.X('date(incident_date):O').title(\"Date\"),\n",
     "    alt.Y('month(incident_date):O').title(\"Month\"),\n",
@@ -36,10 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# GRAPH 2 -- LINE CHART (ALL TIME)\n",
     "alt.Chart(hatecrimes, title='Hate Crimes Over Time').mark_line().encode(\n",
     "        alt.X('data_year:O').title(\"Year\"),\n",
     "        alt.Y('count():N').title(\"Hate Crime Incidents\"),\n",
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,10 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# GRAPH 3 -- LINE CHART (BIAS)\n",
     "top10 = [\"Anti-Black or African American\", \"Anti-Jewish\", \"Anti-White\", \"Anti-Gay (Male)\", \"Anti-Hispanic or Latino\", \"Anti-Other Race/Ethnicity/Ancestry\",\"Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)\", \"Anti-Asian\", \"Anti-Multiple Races, Group\", \"Anti-Lesbian (Female)\"]\n",
     "hatecrimestop10 = hatecrimes.loc[hatecrimes['bias_desc'].isin(top10)]\n",
     "alt.Chart(hatecrimestop10).mark_line().encode(\n",
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# GRAPH 4 -- US MAP\n",
     "states = alt.topo_feature(data.us_10m.url, 'states')\n",
     "alt.Chart(states, title=\"Hate Crime Map\").mark_geoshape().encode(\n",
     "    alt.Color('size:Q').scale(scheme='browns').title(\"Hate Crime Incidents\")\n",
@@ -159,24 +163,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hatecrimes.groupby(['offense_name']).size().sort_values(ascending=False).head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# GRAPH 5 -- BAR CHART (OFFENDER RACE)\n",
     "alt.Chart(hatecrimes).mark_bar().encode(\n",
-    "        x='offender_race:O',\n",
-    "        y = 'count():N'\n",
+    "        alt.Y('offender_race:O', axis=alt.Axis(labelLimit=200)).title(\"Offender Race\").sort('-x'),\n",
+    "        alt.X('count():N').title(\"Hate Crime Incidents\")\n",
     "    ).display()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# GRAPH 6 - LINE GRAPH (RECENT EVENTS)\n",
     "main_c = alt.Chart(hatecrimestop10_rec, title=\"Top Hate Crimes From 2019-2023\").mark_line().encode(\n",
     "        alt.X('yearmonth(incident_date):O').title('Month'),\n",
     "        alt.Y('count()').title('Hate Crime Incidents'), \n",
@@ -226,6 +223,37 @@
     "text = text3 + text2 + text1\n",
     "main_c + text\n",
     "# Want to add text here to note particular events that saw a spike -- George Floyd's murder, the 2021 Atlanta spa shootings, Oct. 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRAPH 7 - SCATTERPLOT?\n",
+    "hatecrimes_people = hatecrimes.loc[hatecrimes['total_individual_victims'] > 0]\n",
+    "alt.Chart(hatecrimes_people, title='Number of Offenders vs. Number of Victims').mark_circle().encode(\n",
+    "    alt.X('total_offender_count').title(\"Total Offenders\"),\n",
+    "    alt.Y('total_individual_victims').title(\"Total Victims\")\n",
+    ").display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRAPH 8 - BAR CHART (LOCATIONS)\n",
+    "hatecrimes.groupby(['location_name']).size().sort_values(ascending=False).head(10)\n",
+    "top_locs = [\"Residence/Home\", \"Highway/Road/Alley/Street/Sidewalk\", \"Other/Unknown\", \"School/College\", \"Parking/Drop Lot/Garage\", \"Church/Synagogue/Temple/Mosque\", \"Commercial/Office Building\", \"Restaurant\", \"School-Elementary/Secondary\", \"Bar/Nightclub\"]\n",
+    "hatecrimestop10_loc = hatecrimes.loc[hatecrimes['location_name'].isin(top_locs)]\n",
+    "\n",
+    "alt.Chart(hatecrimestop10_loc, title=\"Top Locations of Hate Crimes\").mark_bar().encode(\n",
+    "        alt.Y('location_name:O', axis=alt.Axis(labelLimit=200)).title(\"Location of Incident\").sort('-x'),\n",
+    "        alt.X('count():N').title(\"Hate Crime Incidents\")\n",
+    "    ).display()"
    ]
   }
  ],
