--- a/exploration/data_viz_practice.ipynb
+++ b/exploration/data_viz_practice.ipynb
@@ -14,16 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hatecrimes = pd.read_csv(\"../data/hate_crime.csv\")"
+    "hatecrimes = pd.read_csv(\"../data/hate_crime.csv\")\n",
+    "alt.themes.enable('fivethirtyeight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +37,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This heatmap demonstrates the seasonality of hate crimes by showing the days and months in which hate crimes surge. We see here, across the 30+ years represented in this dataset, hate crimes are concentrated in the middle of September/end of October, and are less frequent in December. I hope to use this graph in my final narrative to show when hate crimes are most likely to occur."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +58,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This simple line chart demonstrates the prevalence of hate crimes over time -- specifically from 1991-2023. We see a particular surge in 2001, as well as a steady increase since 2018. I hope to use this chart in the final narrative as a simple way to understand the changing rate of hate crimes over time."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,12 +105,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Here we can see that Anti-Black hate crimes are far more prevalent than other hate crimes, but have decreased from 2022-2023. Anti-Jewish hate crimes on the other hand, have risen since 2021"
+    "This line graph demonstrates the prevalence of hate crimes over time, but broken down the \"bias\" of the crime. We can see that Anti-Black crimes are the most prevalent type of hate-crime every year, while Anti-Jewish hate crimes have streadily risen since 2021. I hope to use this graph to demonstrate how hate crimes affect different populations at different rates, and how those rates change over time.\n",
+    "Note: There are over 300 types of bias represented in this dataset. For this graph, only the ten biases with the highest hate crime rate were depicted."
    ]
   },
   {
@@ -129,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,30 +163,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Total heatmap of all hatecrimes in continental US -- consider adjusting for population"
+    "This chloropleth map illustrates the prevalence of hate crimes across the United States, coloring each state by its total number of hate crime incidents from 1991-2023. We see California has by far the highest rate of hate crimes, with New York/New Jersey also showing higher rates. I hope to use this map to demonstrate not only where hate crimes occur, but address and possibly dispel stereotypes about hate crimes being concentrated in \"conservative\" areas of the country."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# GRAPH 5 -- BAR CHART (OFFENDER RACE)\n",
     "alt.Chart(hatecrimes).mark_bar().encode(\n",
     "        alt.Y('offender_race:O', axis=alt.Axis(labelLimit=200)).title(\"Offender Race\").sort('-x'),\n",
-    "        alt.X('count():N').title(\"Hate Crime Incidents\")\n",
+    "        alt.X('count():N').title(\"Hate Crime Incidents\"),\n",
+    "        color=alt.value(\"#ad2e03\")\n",
     "    ).display()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This bar chart demonstrates the amount of total hate crime incidents grouped by offender race. We see that most hate crimes are committed by white individuals, but there is a lot of missing data (\"Unknown\" offender race). I want to use this graph to complement the previous bar chart that shows the most prevalent biases in hate crimes. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +222,7 @@
     "main_c = alt.Chart(hatecrimestop10_rec, title=\"Top Hate Crimes From 2019-2023\").mark_line().encode(\n",
     "        alt.X('yearmonth(incident_date):O').title('Month'),\n",
     "        alt.Y('count()').title('Hate Crime Incidents'), \n",
-    "        color='bias_desc:N'\n",
+    "        alt.Color('bias_desc:N').title(\"Bias\")\n",
     "    )\n",
     "\n",
     "text1 = alt.Chart({'values': [{'x': 100, 'y': 500}]}).mark_text(\n",
@@ -226,8 +246,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I view this graph as central to my narrative -- demonstrating how large-scale political events lead to an increase in targeted violence. This graph shows occurences of hate crimes throughout the past 5 years, focusing on the most prevalent biases in that timeframe. I've annotated the graph to mark notable sociopolitical events that may help explain sudden increases in hate crimes against certain groups."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +262,16 @@
     "hatecrimes_people = hatecrimes.loc[hatecrimes['total_individual_victims'] > 0]\n",
     "alt.Chart(hatecrimes_people, title='Number of Offenders vs. Number of Victims').mark_circle().encode(\n",
     "    alt.X('total_offender_count').title(\"Total Offenders\"),\n",
-    "    alt.Y('total_individual_victims').title(\"Total Victims\")\n",
+    "    alt.Y('total_individual_victims').title(\"Total Victims\"),\n",
+    "    color=alt.value(\"#ad2e03\")\n",
     ").display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This scatterplot focuses on the strange relationship between total offenders vs. total victims in hate crimes. Among crimes with at least 1 individual victim (i.e., not just property crime), most incidents appear to have less than 10 total offenders and less than 20 total victims. However, the events with the highest number of individual victims (above 60) appear to be largely perpetrated by individual offenders. Conversely, the hate crimes perpetrated by large groups (50+ offenders) appear to have fewer than average victims. I hope to use this graph in my final narrative to provide insight on \"who\" is perpetrating hate crimes -- individuals vs. large collected groups."
    ]
   },
   {
@@ -252,8 +287,16 @@
     "\n",
     "alt.Chart(hatecrimestop10_loc, title=\"Top Locations of Hate Crimes\").mark_bar().encode(\n",
     "        alt.Y('location_name:O', axis=alt.Axis(labelLimit=200)).title(\"Location of Incident\").sort('-x'),\n",
-    "        alt.X('count():N').title(\"Hate Crime Incidents\")\n",
+    "        alt.X('count():N').title(\"Hate Crime Incidents\"),\n",
+    "        color=alt.value(\"#ad2e03\")\n",
     "    ).display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to the previous bar chart, this chart demonstrates the most common locations at which hate crimes occur. Far and away the most popular is personal residency, followed by roads and highways. While there are many cases of unknown location, I hope to use this graph to further focus on the \"where\" of hate crimes."
    ]
   }
  ],
