--- a/exploration/data_viz_practice.ipynb
+++ b/exploration/data_viz_practice.ipynb
@@ -84,10 +84,10 @@
     "# GRAPH 3 -- LINE CHART (BIAS)\n",
     "top10 = [\"Anti-Black or African American\", \"Anti-Jewish\", \"Anti-White\", \"Anti-Gay (Male)\", \"Anti-Hispanic or Latino\", \"Anti-Other Race/Ethnicity/Ancestry\",\"Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)\", \"Anti-Asian\", \"Anti-Multiple Races, Group\", \"Anti-Lesbian (Female)\"]\n",
     "hatecrimestop10 = hatecrimes.loc[hatecrimes['bias_desc'].isin(top10)]\n",
-    "alt.Chart(hatecrimestop10).mark_line().encode(\n",
+    "alt.Chart(hatecrimestop10, title=\"Hate Crimes by Bias Over Time\").mark_line().encode(\n",
     "        alt.X('data_year:O').title(\"Year\"),\n",
     "        alt.Y('count():N').title(\"Incidents\"),\n",
-    "        alt.Color('bias_desc:N').title(\"Crime Bias\").scale(scheme='category10')\n",
+    "        alt.Color('bias_desc:N', legend=alt.Legend(labelLimit=300)).title(\"Crime Bias\").scale(scheme='category10')\n",
     "    ).display()"
    ]
   },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
    "source": [
     "# GRAPH 4 -- US MAP\n",
     "states = alt.topo_feature(data.us_10m.url, 'states')\n",
-    "alt.Chart(states, title=\"Hate Crime Map\").mark_geoshape().encode(\n",
+    "alt.Chart(states, title=\"Hate Crimes Across the U.S.\").mark_geoshape().encode(\n",
     "    alt.Color('size:Q').scale(scheme='browns').title(\"Hate Crime Incidents\")\n",
     ").transform_lookup(\n",
     "    lookup='id',\n",
@@ -158,12 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# GRAPH 5 -- BAR CHART (OFFENDER RACE)\n",
-    "alt.Chart(hatecrimes).mark_bar().encode(\n",
+    "alt.Chart(hatecrimes, title=\"Hate Crimes by Offender Race\").mark_bar().encode(\n",
     "        alt.Y('offender_race:O', axis=alt.Axis(labelLimit=200)).title(\"Offender Race\").sort('-x'),\n",
     "        alt.X('count():N').title(\"Hate Crime Incidents\"),\n",
     "        color=alt.value(\"#ad2e03\")\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
     "main_c = alt.Chart(hatecrimestop10_rec, title=\"Top Hate Crimes From 2019-2023\").mark_line().encode(\n",
     "        alt.X('yearmonth(incident_date):O').title('Month'),\n",
     "        alt.Y('count()').title('Hate Crime Incidents'), \n",
-    "        alt.Color('bias_desc:N').title(\"Bias\")\n",
+    "        alt.Color('bias_desc:N', legend=alt.Legend(labelLimit=300)).title(\"Bias\")\n",
     "    )\n",
     "\n",
     "text1 = alt.Chart({'values': [{'x': 100, 'y': 500}]}).mark_text(\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
