minor changes, new graph

--- a/static_file/critique_changes.ipynb
+++ b/static_file/critique_changes.ipynb
@@ -58,26 +58,13 @@
    "outputs": [],
    "source": [
     "# GRAPH 3 -- HEATMAP (SEASONALITY)\n",
-    "heatmap = alt.Chart(hatecrimes, title=\"Seasonality of Hate Crimes\").mark_rect().encode(\n",
+    "heatmap = alt.Chart(hatecrimes.loc[hatecrimes['data_year'] != 2001], title=alt.Title(\"Seasonality of Hate Crimes\", subtitle=\"Excluding data from the year 2001\")).mark_rect().encode(\n",
     "    alt.X('date(incident_date):O').title(\"Date\"),\n",
     "    alt.Y('month(incident_date):O').title(\"Month\"),\n",
     "\n",
     "    # Previous way of coloring:\n",
-    "    #alt.Color('count()').title(\"Incidents\").scale(scheme='orangered')\n",
-    "\n",
-    "    # New conditional way of coloring\n",
-    "    color=alt.condition('datum.count > 0', \n",
-    "                alt.Color('count()').title(\"Incidents\").scale(scheme='orangered'),  # color when true\n",
-    "                alt.value('gray') # color when false\n",
+    "    alt.Color('count()').title(\"Incidents\").scale(scheme='orangered')\n",
     ")\n",
-    ")\n",
-    "\n",
-    "# df = pd.DataFrame({'x': [30], 'y': ['Oct']})\n",
-    "# rectangle = alt.Chart(df).mark_rect(color='', stroke='black').encode(\n",
-    "#     x='x',\n",
-    "#     y='y'\n",
-    "# )\n",
-    "# heatmap + rectangle\n",
     "heatmap\n",
     "# Main critiques: \"gray out\" ones with no data, \"highlight\" seasons with lots of hate crimes"
    ]
@@ -98,6 +85,43 @@
     "state_counts = hatecrimes_w_ids.groupby(['id'], as_index=False).size()\n",
     "state_counts_w_pop = state_counts.merge(pop, left_on='id', right_on='id')\n",
     "state_counts_w_pop[\"percap\"] = state_counts_w_pop[\"size\"]/state_counts_w_pop[\"population\"]\n",
+    "\n",
+    "# Pop density?\n",
+    "density = pd.read_csv(\"../data/densities.csv\")\n",
+    "state_counts_w_density = state_counts_w_pop.merge(density, left_on='state', right_on='state')\n",
+    "state_counts_w_density[\"density\"] = state_counts_w_density['population']/state_counts_w_density[\"sqmile\"]\n",
+    "\n",
+    "# scatterplot\n",
+    "alt.Chart(state_counts_w_density.loc[state_counts_w_density[\"state\"] != \"District of Columbia\"]).mark_point().encode(\n",
+    "    alt.X('density').title(\"Population Density\"),\n",
+    "    alt.Y('percap').title(\"Hate Crimes Per Capita\"),\n",
+    "    alt.Text('state')\n",
+    ").display()\n",
+    "\n",
+    "\n",
+    "# points = alt.Chart(state_counts_w_density.loc[state_counts_w_density[\"state\"] != \"District of Columbia\"]).mark_point().encode(\n",
+    "#     x='density',\n",
+    "#     y='percap'\n",
+    "# )\n",
+    "\n",
+    "# text = points.mark_text(\n",
+    "#     align='left',\n",
+    "#     baseline='middle',\n",
+    "#     dx=7\n",
+    "# ).encode(\n",
+    "#     text='state'\n",
+    "# )\n",
+    "\n",
+    "# points + text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "# GRAPH 4 -- US MAP\n",
     "states = alt.topo_feature(data.us_10m.url, 'states')\n",
     "alt.Chart(states, title=\"Hate Crimes Across the U.S.\").mark_geoshape().encode(\n",
@@ -203,8 +227,8 @@
     "# GRAPH 7 - SCATTERPLOT?\n",
     "hatecrimes_people = hatecrimes.loc[hatecrimes['total_individual_victims'] > 0]\n",
     "alt.Chart(hatecrimes_people, title=alt.Title('Number of Offenders vs. Number of Victims', subtitle='Among Crimes with <50 Victims and Offenders')).mark_circle(clip=True).encode(\n",
-    "    alt.X('total_offender_count').title(\"Total Offenders\").scale(domain=(0,50)),\n",
-    "    alt.Y('total_individual_victims').title(\"Total Victims\").scale(domain=(0,50)),\n",
+    "    alt.X('total_offender_count').title(\"Total Offenders\").scale(domain=(0,51)),\n",
+    "    alt.Y('total_individual_victims').title(\"Total Victims\").scale(domain=(0,51)),\n",
     "    color=alt.value(\"#ad2e03\")\n",
     ").display()\n",
     "# Main critique: consider 'zooming in', deal with outliers, make sure axis is same on both sides"
@@ -236,6 +260,25 @@
     "    ).display()\n",
     "\n",
     "# Main critique: 'unknowns' here not relevant to story"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New bar chart -- what crimes are taking place\n",
+    "hatecrimes['offense_name'] = hatecrimes['offense_name'].str.split(';', n=1, expand=True)[0]\n",
+    "\n",
+    "topcrimes = hatecrimes.groupby(['offense_name']).size().sort_values(ascending=False).head(10)\n",
+    "topcrimes = list(topcrimes.index)\n",
+    "\n",
+    "alt.Chart(hatecrimes.loc[hatecrimes['offense_name'].isin(topcrimes)], title=\"Top 10 Charges in Hate Crimes\").mark_bar().encode(\n",
+    "        alt.Y('offense_name:O', axis=alt.Axis(labelLimit=200)).title(\"Offense\").sort('-x'),\n",
+    "        alt.X('count():N').title(\"Hate Crime Incidents\"),\n",
+    "        color=alt.value(\"#ad2e03\")\n",
+    "    ).display()"
    ]
   }
  ],
