lots more edits

--- a/static_file/critique_changes.ipynb
+++ b/static_file/critique_changes.ipynb
@@ -14,7 +14,12 @@
     "\n",
     "# Data, default theme\n",
     "hatecrimes = pd.read_csv(\"../data/hate_crime.csv\")\n",
-    "alt.themes.enable('fivethirtyeight')"
+    "population = pd.read_csv(\"../data/population.csv\")\n",
+    "alt.themes.enable('fivethirtyeight')\n",
+    "\n",
+    "# Some basic data cleaning on population\n",
+    "population.dropna(inplace=True)\n",
+    "population.rename(columns={\"Label (Grouping)\": \"state\", \"Total\": \"population\"}, inplace=True)"
    ]
   },
   {
@@ -24,12 +29,12 @@
    "outputs": [],
    "source": [
     "# GRAPH 1 -- LINE CHART (ALL TIME)\n",
+    "# No critiques on this one\n",
     "alt.Chart(hatecrimes, title='Hate Crimes Over Time').mark_line().encode(\n",
     "        alt.X('data_year:O').title(\"Year\"),\n",
     "        alt.Y('count():N').title(\"Hate Crime Incidents\"),\n",
     "        color=alt.value(\"#ad2e03\")\n",
-    "    ).display()\n",
-    "# Not many comments on this one"
+    "    ).display()"
    ]
   },
   {
@@ -39,16 +44,23 @@
    "outputs": [],
    "source": [
     "# GRAPH 2 -- LINE CHART (BY BIAS)\n",
-    "# NOTE: The \"Top 10\" biases were found in 'exploration' files\n",
-    "top10 = [\"Anti-Black or African American\", \"Anti-Jewish\", \"Anti-White\", \"Anti-Gay (Male)\", \"Anti-Hispanic or Latino\", \"Anti-Other Race/Ethnicity/Ancestry\",\"Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)\", \"Anti-Asian\", \"Anti-Multiple Races, Group\", \"Anti-Lesbian (Female)\"]\n",
-    "hatecrimestop10 = hatecrimes.loc[hatecrimes['bias_desc'].isin(top10)]\n",
-    "sorted_legend_list = ['Anti-Black or African American', 'Anti-Jewish', 'Anti-Gay (Male)', 'Anti-White', 'Anti-Hispanic or Latino', 'Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)', 'Anti-Asian', 'Anti-Other Race/Ethnicity/Ancestry', 'Anti-Multiple Races, Group', 'Anti-Lesbian (Female)']\n",
+    "# Main critques: sort legend so it appears in the order on the chart, and expand y axis to better see variation\n",
+    "\n",
+    "# Finding top 10 biases, and filtering for new dataset\n",
+    "top10biases = hatecrimes.groupby(['bias_desc']).size().sort_values(ascending=False).head(10)\n",
+    "top10biases = list(top10biases.index)\n",
+    "hatecrimestop10 = hatecrimes.loc[hatecrimes['bias_desc'].isin(top10biases)]\n",
+    "\n",
+    "# Manual legend sorting\n",
+    "sorted_legend_list = ['Anti-Black or African American', 'Anti-Jewish', 'Anti-Gay (Male)', 'Anti-White', 'Anti-Hispanic or Latino', 'Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)', \n",
+    "                      'Anti-Asian', 'Anti-Other Race/Ethnicity/Ancestry', 'Anti-Multiple Races, Group', 'Anti-Lesbian (Female)']\n",
+    "\n",
+    "# Line chart\n",
     "alt.Chart(hatecrimestop10, title=\"Hate Crimes by Bias Over Time\").mark_line().encode(\n",
     "        alt.X('data_year:O').title(\"Year\"),\n",
     "        alt.Y('count():N').title(\"Incidents\"),\n",
     "        alt.Color('bias_desc:N', legend=alt.Legend(labelLimit=300), sort=sorted_legend_list).title(\"Crime Bias\").scale(scheme='category10')\n",
-    "    ).properties(height=500).display()\n",
-    "# Main comment from criitque was to sort legend so it appears in the order on the chart, potentially expand y axis to better see variation"
+    "    ).properties(height=500).display()"
    ]
   },
   {
@@ -58,15 +70,15 @@
    "outputs": [],
    "source": [
     "# GRAPH 3 -- HEATMAP (SEASONALITY)\n",
-    "heatmap = alt.Chart(hatecrimes.loc[hatecrimes['data_year'] != 2001], title=alt.Title(\"Seasonality of Hate Crimes\", subtitle=\"Excluding data from the year 2001\")).mark_rect().encode(\n",
+    "# Main critiques: \"gray out\" ones with no data, \"highlight\" seasons with lots of hate crimes\n",
+    "# NOTE: Decided these suggestions distract from the data\n",
+    "\n",
+    "# Mapping data excluding 2001, as surge after 9/11 doesn't contribute to seasonality\n",
+    "alt.Chart(hatecrimes.loc[hatecrimes['data_year'] != 2001], title=alt.Title(\"Seasonality of Hate Crimes\", subtitle=\"Excluding data from the year 2001\")).mark_rect().encode(\n",
     "    alt.X('date(incident_date):O').title(\"Date\"),\n",
     "    alt.Y('month(incident_date):O').title(\"Month\"),\n",
-    "\n",
-    "    # Previous way of coloring:\n",
     "    alt.Color('count()').title(\"Incidents\").scale(scheme='orangered')\n",
-    ")\n",
-    "heatmap\n",
-    "# Main critiques: \"gray out\" ones with no data, \"highlight\" seasons with lots of hate crimes"
+    ").display()"
    ]
   },
   {
@@ -75,44 +87,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing, manipulating state/pop data for map\n",
     "# Using Altair's default state/ID dataset\n",
     "from vega_datasets import data\n",
     "states = alt.topo_feature(data.us_10m.url, feature='states')\n",
-    "pop = data.population_engineers_hurricanes(usecols=['state', 'id', 'population'])\n",
-    "hatecrimes_w_ids = hatecrimes.merge(pop, left_on='state_name', right_on='state')\n",
+    "state_ids = data.population_engineers_hurricanes(usecols=['state', 'id'])\n",
     "\n",
     "# Counting hatecrimes by state IDs\n",
+    "hatecrimes_w_ids = hatecrimes.merge(state_ids, left_on='state_name', right_on='state')\n",
     "state_counts = hatecrimes_w_ids.groupby(['id'], as_index=False).size()\n",
-    "state_counts_w_pop = state_counts.merge(pop, left_on='id', right_on='id')\n",
-    "state_counts_w_pop[\"percap\"] = state_counts_w_pop[\"size\"]/state_counts_w_pop[\"population\"]\n",
+    "state_counts = state_counts.merge(state_ids)\n",
     "\n",
-    "# Pop density?\n",
-    "density = pd.read_csv(\"../data/densities.csv\")\n",
-    "state_counts_w_density = state_counts_w_pop.merge(density, left_on='state', right_on='state')\n",
-    "state_counts_w_density[\"density\"] = state_counts_w_density['population']/state_counts_w_density[\"sqmile\"]\n",
-    "\n",
-    "# scatterplot\n",
-    "alt.Chart(state_counts_w_density.loc[state_counts_w_density[\"state\"] != \"District of Columbia\"]).mark_point().encode(\n",
-    "    alt.X('density').title(\"Population Density\"),\n",
-    "    alt.Y('percap').title(\"Hate Crimes Per Capita\"),\n",
-    "    alt.Text('state')\n",
-    ").display()\n",
-    "\n",
-    "\n",
-    "# points = alt.Chart(state_counts_w_density.loc[state_counts_w_density[\"state\"] != \"District of Columbia\"]).mark_point().encode(\n",
-    "#     x='density',\n",
-    "#     y='percap'\n",
-    "# )\n",
-    "\n",
-    "# text = points.mark_text(\n",
-    "#     align='left',\n",
-    "#     baseline='middle',\n",
-    "#     dx=7\n",
-    "# ).encode(\n",
-    "#     text='state'\n",
-    "# )\n",
-    "\n",
-    "# points + text"
+    "# Re-adding state name and population, adding percapita column\n",
+    "state_counts_w_pop = state_counts.merge(population, on=\"state\")\n",
+    "state_counts_w_pop[\"percap\"] = state_counts_w_pop[\"size\"]/state_counts_w_pop[\"population\"]"
    ]
   },
   {
@@ -121,11 +109,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# GRAPH 4 -- US MAP\n",
+    "# Main critiques: normalize for population using per capita\n",
     "states = alt.topo_feature(data.us_10m.url, 'states')\n",
-    "alt.Chart(states, title=\"Hate Crimes Across the U.S.\").mark_geoshape().encode(\n",
-    "    alt.Color('percap:Q').scale(scheme='browns').title(\"Hate Crime Incidents\")\n",
+    "alt.Chart(states, title=alt.Title(\"Hate Crimes Across the U.S.\", subtitle=\"Using 2020 population\")).mark_geoshape().encode(\n",
+    "    alt.Color('percap:Q').scale(scheme='browns').title(\"Hate Crimes Per Capita\")\n",
     ").transform_lookup(\n",
     "    lookup='id',\n",
     "    from_=alt.LookupData(state_counts_w_pop, 'id', list(state_counts_w_pop.columns))\n",
@@ -144,8 +132,13 @@
    "outputs": [],
    "source": [
     "# GRAPH 5 -- BAR CHART (OFFENDER RACE)\n",
+    "# Main critique: clarify \"multiple races\", deal with not specified/unknown, possibly change to percentages\n",
+    "\n",
+    "# Removing 'not specified', changing \"Multiple\" to \"Multiple Races\"\n",
     "hatecrimes_race= hatecrimes.loc[hatecrimes['offender_race'] != \"Not Specified\"]\n",
     "hatecrimes_race[\"offender_race\"] = hatecrimes_race[\"offender_race\"].replace(\"Multiple\", \"Multiple Races\")\n",
+    "\n",
+    "# Chart\n",
     "alt.Chart(hatecrimes_race, title=alt.Title(\"Hate Crimes by Offender Race\", subtitle=\"Among hate crimes where race was specified\")).transform_joinaggregate(\n",
     "    total='count(*)'\n",
     ").transform_calculate(pct = '1/datum.total').mark_bar().encode(\n",
@@ -153,8 +146,8 @@
     "        alt.X('sum(pct):Q').title(\"Hate Crime Incidents\").scale(domain=(0,0.425)).axis(format='%'),\n",
     "        color=alt.value(\"#ad2e03\")\n",
     "    ).display()\n",
-    "# Help converting to percentages here https://stackoverflow.com/questions/56358977/how-to-show-a-histogram-of-percentages-instead-of-counts-using-altair\n",
-    "# Main critique: clarify \"multiple races\", deal with not specified/unknown, possibly change to percentages"
+    "\n",
+    "# Help converting to percentages here https://stackoverflow.com/questions/56358977/how-to-show-a-histogram-of-percentages-instead-of-counts-using-altair"
    ]
   },
   {
@@ -163,12 +156,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data manipulation for \"recent years\" line chart\n",
+    "# Focusing on 2019-2023, finding most popular biases, filtering\n",
+    "years = [2019, 2020, 2021, 2022, 2023]\n",
+    "hatecrimes1924= hatecrimes.loc[hatecrimes['data_year'].isin(years)]\n",
+    "topbiases_recent = hatecrimes1924.groupby(['bias_desc']).size().sort_values(ascending=False).head(10)\n",
+    "topbiases_recent = list(topbiases_recent.index)\n",
+    "hatecrimestop10_rec = hatecrimes1924.loc[hatecrimes1924['bias_desc'].isin(topbiases_recent)]\n",
+    "\n",
+    "# Manual legend sorting\n",
+    "sorted_legend_rec = ['Anti-Black or African American', 'Anti-Jewish', 'Anti-Gay (Male)', 'Anti-White', 'Anti-Hispanic or Latino', 'Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)', \n",
+    "                      'Anti-Asian', 'Anti-Other Race/Ethnicity/Ancestry', 'Anti-Multiple Races, Group', 'Anti-Transgender']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRAPH 6 -- LINE CHART FOR 2019-2023 BY BIAS\n",
+    "# Main critique: legend sorting, vertical lines/dots on important events\n",
+    "# Credit to Dorka for helping me apply the lines/dots :) <3\n",
+    "\n",
+    "# Main line chart\n",
     "main_c = alt.Chart(hatecrimestop10_rec, title=\"Top Hate Crimes From 2019-2023\").mark_line().encode(\n",
     "        alt.X('yearmonth(incident_date):T').title('Month'),\n",
     "        alt.Y('count()').title('Hate Crime Incidents'), \n",
-    "        alt.Color('bias_desc:N', legend=alt.Legend(labelLimit=300), sort=sorted_legend_list).title(\"Bias\")\n",
+    "        alt.Color('bias_desc:N', legend=alt.Legend(labelLimit=300), sort=sorted_legend_rec).title(\"Bias\")\n",
     "    ).properties(height=500, width=1500)\n",
     "\n",
+    "# Groups of text\n",
     "text1 = alt.Chart(pd.DataFrame({'incident_date': ['2020-05-25'], 'label': [\"Murder of George Floyd\"]})).mark_text(\n",
     "    dx=-75, dy=75\n",
     "    ).encode(\n",
@@ -188,6 +206,7 @@
     "        text='label:N')\n",
     "text = text1 + text2 + text3\n",
     "\n",
+    "# Groups of lines\n",
     "line1 = alt.Chart(pd.DataFrame({'incident_date': ['2020-05-25']})).mark_rule(color='#808080').encode(\n",
     "    x='yearmonth(incident_date):T'\n",
     ")\n",
@@ -199,6 +218,7 @@
     ")\n",
     "lines = line1 + line2 + line3\n",
     "\n",
+    "# Groups of dots\n",
     "dot_1 = alt.Chart(pd.DataFrame({'incident_date': ['2020-05-25'], 'y': 250})).mark_point(color='#000000').encode(\n",
     "        x='yearmonth(incident_date):T',\n",
     "        y='y'\n",
@@ -213,9 +233,8 @@
     ")\n",
     "dots = dot_1 + dot_2 + dot_3\n",
     "\n",
-    "main_c + text + lines + dots\n",
-    "# Main critique: legend sorting, vertical lines/dots on important events\n",
-    "# Credit to Dorka for helping me clean up this section of my code :) <3"
+    "# Layering into a single chart\n",
+    "main_c + text + lines + dots"
    ]
   },
   {
@@ -225,13 +244,16 @@
    "outputs": [],
    "source": [
     "# GRAPH 7 - SCATTERPLOT?\n",
+    "# Main critique: consider 'zooming in', deal with outliers, make sure axis is same on both sides\n",
+    "# Filtering to only include crimes with \"people\" victims (not just property crime)\n",
     "hatecrimes_people = hatecrimes.loc[hatecrimes['total_individual_victims'] > 0]\n",
+    "\n",
+    "# Chart, using scale to clip off outliers\n",
     "alt.Chart(hatecrimes_people, title=alt.Title('Number of Offenders vs. Number of Victims', subtitle='Among Crimes with <50 Victims and Offenders')).mark_circle(clip=True).encode(\n",
     "    alt.X('total_offender_count').title(\"Total Offenders\").scale(domain=(0,51)),\n",
     "    alt.Y('total_individual_victims').title(\"Total Victims\").scale(domain=(0,51)),\n",
     "    color=alt.value(\"#ad2e03\")\n",
-    ").display()\n",
-    "# Main critique: consider 'zooming in', deal with outliers, make sure axis is same on both sides"
+    ").display()"
    ]
   },
   {
@@ -240,26 +262,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filtering to find most popular locations\n",
-    "display(hatecrimes.groupby(['location_name']).size().sort_values(ascending=False).head(11))\n",
-    "top_locs = [\"Residence/Home\", \"Highway/Road/Alley/Street/Sidewalk\", \"Government/Public Building\", \"School/College\", \"Parking/Drop Lot/Garage\", \"Church/Synagogue/Temple/Mosque\", \"Commercial/Office Building\", \"Restaurant\", \"School-Elementary/Secondary\", \"Bar/Nightclub\"]\n",
-    "hatecrimestop10_loc = hatecrimes.loc[hatecrimes['location_name'].isin(top_locs)]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GRAPH 8 - BAR CHART (LOCATIONS)\n",
-    "alt.Chart(hatecrimestop10_loc, title=\"Top Locations of Hate Crimes\").mark_bar().encode(\n",
+    "# GRAPH 8 -- BAR CHART (LOCATIONS)\n",
+    "# Main critique: 'unknowns' here not relevant to story, add percentages like other bar graph\n",
+    "# Removing 'unknown' location, finding top 10, filtering\n",
+    "hatecrimes_known = hatecrimes.loc[hatecrimes['location_name'] != \"Other/Unknown\"]\n",
+    "top_locs = hatecrimes_known.groupby(['location_name']).size().sort_values(ascending=False).head(10)\n",
+    "top_locs = list(top_locs.index)\n",
+    "hatecrimestop10_loc = hatecrimes.loc[hatecrimes['location_name'].isin(top_locs)]\n",
+    "\n",
+    "# Chart, using same percent method as previously cited\n",
+    "alt.Chart(hatecrimestop10_loc, title=\"Top Locations of Hate Crimes\").transform_joinaggregate(\n",
+    "    total='count(*)'\n",
+    ").transform_calculate(pct = '1/datum.total').mark_bar().encode(\n",
     "        alt.Y('location_name:O', axis=alt.Axis(labelLimit=200)).title(\"Location of Incident\").sort('-x'),\n",
-    "        alt.X('count():N').title(\"Hate Crime Incidents\"),\n",
+    "        alt.X('sum(pct):Q').title(\"Hate Crime Incidents\").scale(domain=(0,0.425)).axis(format='%'),\n",
     "        color=alt.value(\"#ad2e03\")\n",
-    "    ).display()\n",
-    "\n",
-    "# Main critique: 'unknowns' here not relevant to story"
+    "    ).display()\n"
    ]
   },
   {
@@ -268,9 +286,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# New bar chart -- what crimes are taking place\n",
-    "hatecrimes['offense_name'] = hatecrimes['offense_name'].str.split(';', n=1, expand=True)[0]\n",
+    "# GRAPH 9 -- BAR CHART (OFFENSES)\n",
+    "# While this was not critiqued by peers, it is similar to my other bar charts\n",
+    "# I chose not to use percentages on this one to focus on the magnitude of \n",
+    "# different types of crimes\n",
     "\n",
+    "# Handling with 'joint offenses' by focusing on primary (first charge before ;)\n",
+    "hatecrimes['offense_name'] = hatecrimes['offense_name'].str.split(';', n=1, expand=True)[0]\n",
     "topcrimes = hatecrimes.groupby(['offense_name']).size().sort_values(ascending=False).head(10)\n",
     "topcrimes = list(topcrimes.index)\n",
     "\n",
